# social-ip-engine

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROJECT-OVERVIEW.html  pyproject.toml  render.yaml
.playwright-mcp/: page-2026-05-29T06-14-57-766Z.yml  page-2026-05-29T06-15-11-287Z.yml  page-2026-05-29T06-15-23-009Z.yml  page-2026-05-29T06-15-52-082Z.yml  page-2026-05-29T06-16-11-265Z.yml  page-2026-05-29T06-16-17-137Z.yml  page-2026-05-29T06-16-33-769Z.yml  page-2026-05-29T06-16-46-225Z.yml  page-2026-05-29T06-16-55-489Z.yml  page-2026-05-29T06-17-01-941Z.yml  page-2026-05-29T06-17-11-758Z.yml  page-2026-05-29T06-17-17-789Z.yml
campaigns/: voice_config.yaml
configs/: jessica.yaml  tcm-sales-flow.yaml
deploy/: AUTO-FANOUT.md
docs/: DEPLOYMENT.md  FREELANCER-GUIDE.md  INTEGRATION-PLAN.html  MESSENGER-ACTIVATION.md  META-APP-SETUP-GUIDE.md  NEXT-STEPS.html  agent-overview.html  chat-memory-showcase.html  content-flow-diagram.html  diagnostic-upgrade-showcase.html  prd-video-consultation.md  prd-webhook-context-enrichment.md  心宜中醫-產品照-請求.md
scripts/: add_protocols.py  backfill_comments.py  batch_infographic_gen.py  batch_voice_gen.py  content_bodies_data.py  dry_eye_reel_v3.py  export_dm_map.py  fb_probe.py  fb_test_publish_one_row.py  fill_script_property.py  gen_anxiety_assets.py  gen_carousel_pressure_points.py  init_db.py  notion_assets.json  notion_fanout.py  notion_ids.json  notion_image.py  notion_prompts.py  notion_video.py  notion_watch.py  persona_dry_run.py  persona_dry_run_social.py  publish_pressure_points_carousel.py  qa_constitution_flow.py  (+4 more)
(+319 files in other folders)
