[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcm-jessica"
version = "0.1.0"
description = "WhatsApp-native TCM wellness sales & care agent for 心宜中醫 (Care Plus)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50.0",
    "anthropic>=0.40.0",  # kept for vision fallback if ever needed
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.4",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ipython>=8.29.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
